--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Dependências do Node.js
 /node_modules/
 
+/node_modules/electron/dist/electron.exe
+
 # Arquivos de log
 npm-debug.log
 yarn-debug.log
