--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Dependências do Node.js
 /node_modules/
 
-/node_modules/electron/dist/electron.exe
-
 # Arquivos de log
 npm-debug.log
 yarn-debug.log
@@ -28,3 +26,6 @@ package-lock.json
 
 # Outros arquivos que podem ser gerados no desenvolvimento
 *.log
+
+# Arquivos binários do Electron
+node_modules/electron/dist/electron.exe
