--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,16 @@ node_modules/*
 # Arquivos .exe
 *.exe
 
+node_modules/electron/dist/electron.exe
+
 # Arquivos de log
 npm-debug.log
 yarn-debug.log
 yarn-error.log
 
 # Diretórios de builds do Electron
-/dist/*
-/build/*
+/dist/
+/build/
 
 # Arquivos do sistema operacional (como arquivos temporários)
 .DS_Store
