--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "MIT",
     "devDependencies": {
         "electron-builder": "^24.0.0",
+        "electron-rebuild": "^3.2.9",
         "electron-reload": "^1.4.0"
     },
     "engines": {
@@ -30,7 +31,7 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "better-sqlite3": "^11.6.0",
-        "electron": "^33.2.0"
+        "electron": "^33.2.1"
     },
     "bugs": {
         "url": "https://github.com/GustavoGodoiDev/AncoreSoftware/issues"
