--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,39 @@
-# Dependências do Node.js
-node_modules/
-
-# Arquivos .exe gerados
-*.exe
-
-# Arquivos de log
+# Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Diretórios de builds do Electron
-/dist/
-/build/
-/out/
-
-# Arquivos do sistema operacional
+# Diretórios do sistema operacional
 .DS_Store
 Thumbs.db
+
+# Dependências do Node.js
+node_modules/
+
+# Arquivos de build
+/dist/
+/build/
+
+# Arquivos temporários
+*.tmp
+*.temp
 *.swp
-.nfs*
 
-# Arquivos de ambiente de desenvolvimento
-.env
+# Não Puxar executáveis
+*.exe
 
-# Configurações locais de IDEs e editores
+# Configurações do editor
 .vscode/
 .idea/
+*.code-workspace
 
-# Outros arquivos ou diretórios gerados no desenvolvimento
-*.lock
+# Arquivos do Electron
+.cache/
+out/
+tmp/
+
+# Configurações locais e chaves
+.env
+.env.local
